# runifi

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  aux | grep runifi  deny.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-full.yml  ci.yml  release.yml
config/: runifi.example.toml
config/examples/: demo-pipeline.toml
crates/runifi-api/: Cargo.toml  build.rs
crates/runifi-api/dashboard/: app.js  index.html  style.css
crates/runifi-api/dashboard-react/: index.html  package-lock.json  package.json  vite.config.ts
crates/runifi-api/dashboard-react/src/: App.tsx  main.tsx
crates/runifi-api/dashboard-react/src/components/: AddProcessorModal.tsx  Breadcrumb.tsx  BulletinBoard.tsx  CanvasSearch.tsx  ColorPickerDialog.tsx  ComponentToolbar.tsx  ConfirmDialog.tsx  ConnectionConfigModal.tsx  ConnectionEdge.tsx  ConnectionModal.tsx  ContextMenu.tsx  ControllerServicesPanel.tsx  FlowCanvas.tsx  FunnelNode.tsx  Header.tsx  LabelNode.tsx  OperatePalette.tsx  PortNode.tsx  ProcessGroupConfigModal.tsx  ProcessGroupNode.tsx  ProcessorConfigModal.tsx  ProcessorNode.tsx  ProcessorPalette.tsx  QueueInspectorModal.tsx  SummaryBar.tsx  ToastNotifier.tsx
crates/runifi-api/dashboard-react/src/hooks/: useFlowTopology.ts  useGroupNavigation.ts  usePlugins.ts  useServices.ts  useSseMetrics.ts  useToast.ts
crates/runifi-api/dashboard-react/src/styles/: global.css
crates/runifi-api/dashboard-react/src/types/: api.ts  flow.ts
crates/runifi-api/dashboard-react/src/utils/: alignment.ts  edgeRouting.ts  format.ts  layout.ts
crates/runifi-api/src/: auth.rs  dashboard.rs  dto.rs  error.rs  lib.rs  rbac.rs  state.rs
crates/runifi-api/src/routes/: auth_routes.rs  bulletins.rs  cluster.rs  connections.rs  events.rs  flow.rs  labels.rs  mod.rs  plugins.rs  process_groups.rs  processors.rs  provenance.rs  reporting_tasks.rs  secrets.rs  services.rs  system.rs  user_groups.rs  users.rs  versions.rs
crates/runifi-cli/: Cargo.toml
crates/runifi-cli/src/: main.rs
crates/runifi-core/: Cargo.toml
crates/runifi-core/benches/: connection_bench.rs  content_repo_bench.rs  flowfile_bench.rs  pipeline_bench.rs
crates/runifi-core/src/: error.rs  id.rs  lib.rs
crates/runifi-core/src/audit/: event.rs  logger.rs  mod.rs
crates/runifi-core/src/auth/: apikey_provider.rs  chain.rs  identity_mapper.rs  jwt.rs  ldap_provider.rs  local_provider.rs  mod.rs  models.rs  mtls_provider.rs  oidc_provider.rs  password.rs  provider.rs  session.rs  store.rs
crates/runifi-core/src/cluster/: config.rs  coordinator.rs  election.rs  gossip.rs  heartbeat.rs  load_balance.rs  mod.rs  node.rs  protocol.rs  quorum.rs  replication.rs
crates/runifi-core/src/config/: flow_config.rs  mod.rs  permissions.rs  property_encryption.rs  secrets.rs  sensitive.rs
crates/runifi-core/src/connection/: back_pressure.rs  flow_connection.rs  mod.rs  query.rs
crates/runifi-core/src/engine/: bulletin.rs  flow_engine.rs  handle.rs  metrics.rs  mod.rs  mutation.rs  mutation_handler.rs  persistence.rs  process_group.rs  processor_node.rs  reporting_supervisor.rs  reporting_task_manager.rs  supervisor.rs  validation.rs
crates/runifi-core/src/expression/: ast.rs  evaluator.rs  functions.rs  lexer.rs  mod.rs  parser.rs
crates/runifi-core/src/registry/: mod.rs  plugin_registry.rs  service_registry.rs
crates/runifi-core/src/repository/: cleanup.rs  content_encrypted.rs  content_file.rs  content_memory.rs  content_repo.rs  encrypted_wal.rs  env_key_provider.rs  file_key_provider.rs  flowfile_repo.rs  flowfile_wal.rs  key_provider.rs  mod.rs  provenance_file.rs  provenance_format.rs  provenance_index.rs  provenance_repo.rs  segment.rs  state_provider.rs  static_key_provider.rs  wal_format.rs
crates/runifi-core/src/session/: factory.rs  mod.rs  process_session.rs
crates/runifi-core/src/versioning/: diff.rs  mod.rs  version_store.rs
crates/runifi-core/tests/: end_to_end_flow.rs  engine_mutations.rs  wal_recovery.rs
crates/runifi-plugin-api/: Cargo.toml
crates/runifi-plugin-api/src/: context.rs  flowfile.rs  lib.rs  processor.rs  property.rs  record.rs  relationship.rs  reporting.rs  result.rs  service.rs  session.rs  sink.rs  source.rs  state.rs  validation.rs
crates/runifi-processors/: Cargo.toml
crates/runifi-processors/src/: bulletin_forwarder_task.rs  distributed_map_cache.rs  evaluate_jsonpath.rs  extract_text.rs  flatten_json.rs  funnel.rs  generate_flowfile.rs  get_file.rs  lib.rs  log_attribute.rs  log_reporting_task.rs  parse_syslog.rs  prometheus_reporting_task.rs  pull_flowfile.rs  push_flowfile.rs  put_file.rs  route_on_attribute.rs  split_content.rs  split_json.rs  update_attribute.rs  validate_json.rs
crates/runifi-processors/src/record/: convert_record.rs  csv_reader.rs  csv_writer.rs  json_reader.rs  json_writer.rs  mod.rs  partition_record.rs  schema_registry.rs  update_record.rs
crates/runifi-server/: Cargo.toml
crates/runifi-server/src/: main.rs
crates/runifi-transport/: Cargo.toml
crates/runifi-transport/src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs  tls.rs  transfer.rs
crates/runifi-transport/tests/: integration.rs
