[workspace]
resolver = "2"
members = [
    "crates/runifi-plugin-api",
    "crates/runifi-core",
    "crates/runifi-processors",
    "crates/runifi-transport",
    "crates/runifi-api",
    "crates/runifi-server",
    "crates/runifi-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"                     # CSV reader/writer for record processing

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Networking
quinn = "0.11"                # QUIC transport
rustls = "0.23"
rcgen = "0.13"                # X.509 certificate generation
rustls-pemfile = "2"          # PEM file parsing for certs/keys
blake3 = "1"                  # BLAKE3 hash for content integrity

# IO
bytes = { version = "1", features = ["serde"] }
memmap2 = "0.9"              # Memory-mapped files for large transfers
io-uring = "0.7"             # Linux io_uring for zero-copy IO
crc32fast = "1"              # Fast CRC32 checksums for content integrity

# Async utilities
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
dashmap = "6"                # Concurrent hashmap
crossbeam = "0.8"            # Lock-free data structures
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
inventory = "0.3"            # Compile-time plugin registration
slab = "0.4"                 # Slab allocator for FlowFile IDs
parking_lot = "0.12"         # Fast synchronization primitives
smallvec = "2"               # Small-buffer-optimized Vec
regex-lite = "0.1"           # Lightweight regex for expression language
cron = "0.15"                # CRON expression parsing for scheduled processors
jsonpath_lib = "0.3"         # JSONPath query engine for JSON processors
jsonpath-rust = "1.0"        # JSONPath expression evaluation
aes-gcm = "0.10"             # AES-256-GCM authenticated encryption
zeroize = { version = "1", features = ["derive"] }  # Secure memory zeroing
hex = "0.4"                  # Hex encoding/decoding for keys
base64 = "0.22"              # Base64 encoding for encrypted properties
argon2 = "0.5"               # Password hashing
jsonwebtoken = "9"           # JWT token generation/validation
jsonschema = "0.45"          # JSON Schema validation
git2 = "0.20"                # Git operations for flow versioning
x509-parser = "0.16"         # X.509 certificate parsing for mTLS

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "1.0"

# Web API
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
tower = { version = "0.5", features = ["util"] }
governor = "0.10"
tokio-stream = { version = "0.1", features = ["time"] }
include_dir = "0.7"
subtle = "2"
rand = "0.9"
urlencoding = "2"

# Internal crates
runifi-plugin-api = { path = "crates/runifi-plugin-api" }
runifi-core = { path = "crates/runifi-core" }
runifi-processors = { path = "crates/runifi-processors" }
runifi-transport = { path = "crates/runifi-transport" }
runifi-api = { path = "crates/runifi-api" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
