[package]
name = "runifi-api"
description = "REST API and web dashboard for RuniFi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runifi-core = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
include_dir = { workspace = true }
bytes = { workspace = true }
