[package]
name = "runifi-api"
description = "REST API and web dashboard for RuniFi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runifi-core = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower-http = { workspace = true, features = ["cors", "limit"] }
tower = { workspace = true }
governor = { workspace = true }
runifi-plugin-api = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
include_dir = { workspace = true }
bytes = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
axum-test = "19"
