[package]
name = "runifi-core"
description = "Core data flow engine for RuniFi — engine, repositories, connections, and scheduling"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runifi-plugin-api = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
inventory = { workspace = true }
slab = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
toml = { workspace = true }
regex-lite = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
runifi-processors = { path = "../runifi-processors" }
inventory = { workspace = true }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "flowfile_bench"
harness = false

[[bench]]
name = "content_repo_bench"
harness = false

[[bench]]
name = "connection_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
