[package]
name = "runifi-processors"
description = "Built-in processors for RuniFi — file I/O, routing, debugging"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["all"]
all = ["filesystem", "routing", "debug", "transformation"]
filesystem = []
routing = []
debug = []
transformation = ["serde_json", "jsonpath_lib"]

[dependencies]
runifi-plugin-api = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonpath_lib = { workspace = true, optional = true }
