[package]
name = "runifi-processors"
description = "Built-in processors for RuniFi — file I/O, routing, debugging"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["all"]
all = ["filesystem", "routing", "debug", "transformation", "json", "extraction", "transport", "record"]
filesystem = []
routing = []
debug = []
transformation = ["serde_json", "jsonpath_lib"]
json = ["serde_json", "dep:jsonschema"]
extraction = ["dep:jsonpath-rust", "serde_json"]
transport = ["dep:runifi-transport", "dep:tokio"]
record = ["serde_json", "dep:csv"]

[dependencies]
runifi-plugin-api = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonpath_lib = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }
jsonpath-rust = { workspace = true, optional = true }
runifi-transport = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
