[package]
name = "runifi"
description = "RuniFi server — high-performance data flow engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "runifi"
path = "src/main.rs"

[dependencies]
runifi-plugin-api = { workspace = true }
runifi-core = { workspace = true }
runifi-processors = { workspace = true }
runifi-transport = { workspace = true }
runifi-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
inventory = { workspace = true }
hex = { workspace = true }

[package.metadata.deb]
maintainer = "RuniFi Contributors"
copyright = "2024, RuniFi Contributors"
extended-description = "A Rust reimplementation of Apache NiFi, purpose-built for ultra-low-latency and high-throughput file transfers."
section = "utils"
priority = "optional"
assets = [
    ["../../target/release/runifi", "usr/bin/", "755"],
    ["../../target/release/runifi-cli", "usr/bin/", "755"],
    ["../../config/examples/demo-pipeline.toml", "etc/runifi/flow.example.toml", "644"],
    ["../../dist/runifi.env", "etc/runifi/runifi.env", "644"],
    ["../../dist/runifi.service", "usr/lib/systemd/system/runifi.service", "644"],
]
conf-files = [
    "/etc/runifi/runifi.env",
]
maintainer-scripts = "../../dist/debian/"
systemd-units = { enable = false, start = false }

[package.metadata.generate-rpm]
assets = [
    { source = "../../target/release/runifi", dest = "/usr/bin/runifi", mode = "0755" },
    { source = "../../target/release/runifi-cli", dest = "/usr/bin/runifi-cli", mode = "0755" },
    { source = "../../config/examples/demo-pipeline.toml", dest = "/etc/runifi/flow.example.toml", mode = "0644" },
    { source = "../../dist/runifi.env", dest = "/etc/runifi/runifi.env", mode = "0644", config = "noreplace" },
    { source = "../../dist/runifi.service", dest = "/usr/lib/systemd/system/runifi.service", mode = "0644" },
]
post_install_script = "../../dist/rpm/post_install.sh"
pre_uninstall_script = "../../dist/rpm/pre_uninstall.sh"
